FIREFOX: fixes misalignment of global nav dropdown carets when dropdown is open

--- a/cdap-ui/app/styles/themes/cdap/header.less
+++ b/cdap-ui/app/styles/themes/cdap/header.less
@@ -221,9 +221,13 @@ body {
               a.dropdown-toggle {
                 margin: 7px;
                 padding: 10px;
+                overflow: auto;
                 .border-radius(4px);
                 span {
-                  &:first-child { color: @cdap-darkness; }
+                  &:first-child {
+                    color: @cdap-darkness;
+                    float: left;
+                  }
                   &:last-child {
                     color: lightgray;
                     float: right;
